Fix text-overflow of thing heading

--- a/app/assets/stylesheets/components/things.css.scss
+++ b/app/assets/stylesheets/components/things.css.scss
@@ -186,7 +186,10 @@ article.thing {
     }
 
     @media (min-width: $screen-sm-min) {
-      @include text-overflow;
+      .title,
+      .subtitle {
+        @include text-overflow;
+      }
     }
   }
 
